# genesis_db

./: .markdownlint.yaml  404.html  CODEOWNERS  Makefile  README.md  docker-compose-test.yml  index.html  mkdocs.yml  project_settings.json  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: build.yml  docs.yml  tests.yml
docs/: index.md  postgresql.md
docs/openapi/: openapi_orch.md  openapi_orch.yaml  openapi_status.md  openapi_status.yaml  openapi_user.md
etc/exordos_db/: core_agent.conf.j2  exordos_db.conf.j2  exordos_pg_agent.conf  logging.yaml
etc/genesis_db/: core_agent.conf  core_agent.conf.j2  genesis_db.conf  genesis_db.conf.j2  genesis_pg_agent.conf  logging.yaml
etc/systemd/: exordos-db-core-agent.service  exordos-db-gservice.service  exordos-db-orch-api.service  exordos-db-pg-agent.service  exordos-db-status-api.service  exordos-db-user-api.service  exordos-patroni.service  genesis-db-builder-agent.service  genesis-db-core-agent.service  genesis-db-gservice.service  genesis-db-orch-api.service  genesis-db-pg-agent.service  genesis-db-status-api.service  genesis-db-user-api.service  genesis-patroni.service
exordos_db/: version.py
exordos_db/agent/universal/drivers/: pg.py
exordos_db/cmd/: bootstrap.py  gservice.py  orch_api.py  status_api.py  user_api.py
exordos_db/common/: config.py  constants.py  permissions.py  utils.py
exordos_db/common/pg_auth/: passwd.py
exordos_db/infra/dm/: models.py
exordos_db/infra/services/: builder.py
exordos_db/orch_api/api/: app.py  routes.py
exordos_db/paas/dm/: models.py
exordos_db/paas/services/: builder.py
exordos_db/services/: gservice.py
exordos_db/status_api/api/: app.py  routes.py
exordos_db/tests/manual/openapi/: test_openapi.py
exordos_db/user_api/api/: app.py  controllers.py  routes.py
exordos_db/user_api/dm/: models.py
genesis/: genesis.yaml
genesis/images/: bootstrap.sh  cp_bootstrap.sh  cp_install.sh  install.sh  lib_bootstrap.sh  pg_bootstrap.sh  pg_install.sh
genesis/manifests/: communal_pg_cluster.yaml.j2  dbaas.yaml  dbaas.yaml.j2
genesis_db/: version.py
genesis_db/agent/universal/drivers/: pg.py
genesis_db/cmd/: bootstrap.py  builder.py  gservice.py  orch_api.py  status_api.py  user_api.py
genesis_db/common/: config.py  constants.py  permissions.py  utils.py
genesis_db/common/pg_auth/: passwd.py
genesis_db/infra/dm/: models.py
genesis_db/infra/services/: builder.py
genesis_db/orch_api/api/: app.py  controllers.py  routes.py
genesis_db/paas/dm/: models.py
genesis_db/paas/services/: builder.py
genesis_db/services/: gservice.py
genesis_db/status_api/api/: app.py  controllers.py  routes.py  versions.py
genesis_db/tests/manual/openapi/: test_openapi.py
genesis_db/user_api/api/: app.py  controllers.py  routes.py
genesis_db/user_api/dm/: models.py
lab/: README.md  automation_start.sh  automation_stop.sh  case_1.sh  case_2_corrupt_data.sh  case_3.1_add_latency.sh  case_3.2_remove_latency.sh  logs_local_patroni.sh  pgbench_generate_data.sh  pgbench_run.sh  psql.sh  session_start.sh
migrations/: 0000-init-63a338.py
openapi/: openapi_orch.yaml  openapi_user.yaml
openapi/openapi_orch/: index.html
openapi/openapi_status/: index.html  openapi_status.yaml
openapi/openapi_user/: index.html  openapi_user.yaml
postgresql/: index.html
search/: search_index.json
