[metadata]
name = genesis_db
summary = DBaaS for Genesis Core
description_file =
    README.md
long_description_content_type = text/markdown
author = Genesis Corporation
author_email = mail@gmelikov.ru
home_page = https://github.com/infraguys/genesis_db/
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13


[files]
packages =
    genesis_db


[entry_points]
console_scripts =
    genesis-db-user-api = genesis_db.cmd.user_api:main
    genesis-db-builder-agent = genesis_db.cmd.builder:main